--- a/src/pages/price-list/commercial-ice-machine-repair-cost.astro
+++ b/src/pages/price-list/commercial-ice-machine-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -521,6 +522,391 @@ const title ="Commercial Ice Machine Repair Cost - Full Pricing Guide";
     </div>
     <Btn />
 
+
+
+
+
+
+
+
+
+
+
+
+    <div class="page213-content" id="left-menu-5">
+      <div class="content__page-full-hed">
+        <div class="content__page-hed-h">
+          <h2>
+            Cost to Repair a Commercial Ice Machine Depending on the Brand
+          </h2>
+        </div>
+        <div class="content__page-hed-desc"></div>
+      </div>
+
+      <div class="content__page-full-desc">
+        <div class="content__page-desc">
+          <h3>Hoshizaki</h3>
+          <p>
+            Hoshizaki is renowned for its durable and high-quality
+            commercial ice machines, which are widely used in the
+            foodservice industry. The cost to repair a Hoshizaki ice machine
+            can vary significantly depending on the issue at hand. Minor
+            repairs, such as replacing a water filter or fixing a small
+            leak, might cost between <b>$100 to $300</b>. However, more
+            severe issues, like compressor failure or control board
+            malfunctions, could escalate repair costs to between <b
+              >$500 and $1,000</b
+            >. Given the premium nature of Hoshizaki products, parts can be
+            more expensive, and it's often recommended to have repairs
+            conducted by certified technicians to ensure optimal performance
+            and longevity.
+          </p>
+
+          <h3>Scotsman</h3>
+          <p>
+            Scotsman ice machines are known for their efficiency and
+            innovative features, making them a popular choice in many
+            commercial settings. Repair costs for Scotsman ice machines can
+            range from <b>$150</b> for simpler fixes, such as replacing a water
+            inlet valve, to over <b>$800</b> for more complex problems like evaporator
+            or condenser repairs. Scotsman offers a variety of models, and the
+            repair costs can also depend on the specific model and its age. Given
+            their sophisticated technology, it's advisable to use authorized
+            service providers who are familiar with Scotsman equipment to avoid
+            further issues and ensure the repairs are done correctly.
+          </p>
+
+          <h3>Manitowoc</h3>
+          <p>
+            Manitowoc ice machines are highly regarded for their reliability
+            and energy efficiency, commonly found in restaurants and hotels.
+            The cost to repair these machines can vary, with minor repairs
+            such as thermostat replacements or water pump issues costing
+            around <b>$200 to $400</b>. More extensive repairs, such as
+            fixing the ice-making mechanism or replacing the compressor, can
+            be more costly, ranging from <b>$600 to $1,200</b>. Manitowoc
+            also offers extensive support and parts availability, which can
+            help manage repair costs, but it is crucial to use trained
+            technicians who understand the specific requirements of
+            Manitowoc machines to maintain their efficiency.
+          </p>
+
+          <h3>Ice-O-Matic</h3>
+          <p>
+            Ice-O-Matic ice machines are valued for their straightforward
+            design and ease of use, making them a staple in many commercial
+            kitchens. Repair costs for Ice-O-Matic machines are relatively
+            moderate compared to other brands, with minor repairs typically
+            costing between <b>$100 and $300</b>. However, more significant
+            issues, such as replacing a compressor or fixing electrical
+            problems, can cost between <b>$500 and $900</b>. Ice-O-Matic
+            provides a good balance between upfront cost and repair
+            expenses, but as with other brands, using certified technicians
+            for repairs is crucial to ensure the machine operates correctly
+            and maintains its longevity.
+          </p>
+
+          <h3>Koolaire</h3>
+          <p>
+            Koolaire, a brand under the Manitowoc umbrella, offers
+            commercial ice machines that are both reliable and
+            cost-effective. Repair costs for Koolaire machines tend to be
+            reasonable, with minor issues like replacing a water filter or
+            valve usually costing between <b>$100 and $250</b>. More complex
+            repairs, such as addressing refrigeration system failures or
+            significant electrical issues, can range from <b>$400 to $800</b
+            >. Koolaire machines are designed to be service-friendly, which
+            can help reduce labor costs associated with repairs. Ensuring
+            that repairs are conducted by experienced technicians familiar
+            with Koolaire products is essential to maintain the machine’s
+            efficiency and durability.
+          </p>
+
+          <p>
+            Each brand has its own set of strengths and potential repair
+            costs, which can fluctuate based on the specific model, age of
+            the machine, and complexity of the repair needed. Regular
+            maintenance and using authorized technicians can help mitigate
+            some of these repair expenses.
+          </p>
+        </div>
+      </div>
+
+      <div class="content__page-full-logo-brand">
+        <div class="ph-logo-brand">
+          <div class="logo-brand logo-bran-ph-1">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/scotsman.webp"
+                alt="Scotsman"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-2">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/hoshizaki.webp"
+                alt="Hoshizaki"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-3">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/manitowoc.webp"
+                alt="Manitowoc"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-4">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/ice-o-matic.webp"
+                alt="Ice-O-Matic"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-5">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/follett.webp"
+                alt="Follett"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-6">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kold-draft.webp"
+                alt="Kold-Draft"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-7">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/u-line.webp"
+                alt="U-Line"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-8">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/maxx-ice.webp"
+                alt="Maxx Ice"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-9">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/bluestone.webp"
+                alt="Bluestone"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-10">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/cornelius.webp"
+                alt="Cornelius"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-11">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/whynter.webp"
+                alt="Whynter"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-12">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/sub-zero.webp"
+                alt="Sub-Zero"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-13">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/frigidaire.webp"
+                alt="Frigidaire"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-14">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/ge-appliances.webp"
+                alt="GE Appliances"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-15">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/viking.webp"
+                alt="Viking"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-16">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/true-refrigeration.webp"
+                alt="True Refrigeration"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="full-desc-logo-brand">
+          <p>Brands of Walk-in ice machines we repair</p>
+
+          <div class="desc-logo-brand logo-bran-d-1">
+            <h3><a href="#">Scotsman</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-2">
+            <h3><a href="#">Hoshizaki</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-3">
+            <h3><a href="#">Manitowoc</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-4">
+            <h3><a href="#">Ice-O-Matic</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-5">
+            <h3><a href="#">Follett</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-6">
+            <h3><a href="#">Kold-Draft</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-7">
+            <h3><a href="#">U-Line</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-8">
+            <h3><a href="#">Maxx Ice</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-9">
+            <h3><a href="#">Bluestone</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-10">
+            <h3><a href="#">Cornelius</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-11">
+            <h3><a href="#">Whynter</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-12">
+            <h3><a href="#">Sub-Zero</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-13">
+            <h3><a href="#">Frigidaire</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-14">
+            <h3><a href="#">GE Appliances</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-15">
+            <h3><a href="#">Viking</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-16">
+            <h3><a href="#">True Refrigeration</a></h3>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="maintenance">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
@@ -781,3 +1167,4 @@ const title ="Commercial Ice Machine Repair Cost - Full Pricing Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
