--- a/src/pages/price-list/commercial-stove-repair-cost.astro
+++ b/src/pages/price-list/commercial-stove-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -760,6 +761,319 @@ const title ="Commercial Stove Repair Cost - Full Pricing Guide";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+<div class="page213-content" id="left-menu-5">
+          <div class="content__page-full-hed">
+            <div class="content__page-hed-h">
+              <h2>Cost to Repair a Commercial Stove Depending on the Brand</h2>
+            </div>
+            <div class="content__page-hed-desc"></div>
+          </div>
+
+          <div class="content__page-full-desc">
+            <div class="content__page-desc">
+              <h3>Vulcan</h3>
+              <p>
+                Vulcan is a well-known brand in the commercial kitchen industry, recognized for its high-quality and durable stoves. However, repair costs for Vulcan stoves can be on the higher end due to the premium nature of their parts and the need for specialized technicians. Common repairs might include burner replacements, thermostat adjustments, or control panel fixes. Given the brand's reputation and the complexity of its stoves, repair costs can range from <b>$300 to $1000</b>, depending on the extent of the damage and the specific model. Investing in regular maintenance can help mitigate these costs by catching issues early.
+              </p>
+
+              <h3>Garland</h3>
+              <p>
+                Garland stoves are widely used in professional kitchens for their reliability and robust performance. Repair costs for Garland stoves typically fall within a moderate range, with most common issues involving burner replacements, igniter repairs, or valve adjustments. Depending on the nature of the repair and the availability of parts, costs can range from <b>$250 to $800</b>. Garland stoves often benefit from readily available parts, which can make repairs quicker and slightly less expensive compared to some other premium brands. Regular servicing can further help in maintaining the stove's longevity and performance.
+              </p>
+
+              <h3>Southbend</h3>
+              <p>
+                Southbend is another reputable brand in the commercial kitchen sector, known for their versatile and high-performance stoves. Repairing a Southbend stove can be somewhat costly due to the precision engineering and high-quality components involved. Typical repairs may include fixing ignition systems, replacing burner assemblies, or addressing thermostat issues. The cost for repairing Southbend stoves generally ranges from <b>$300 to $900</b>. The brand's widespread use means that parts are usually readily available, but the need for skilled technicians can drive up labor costs. Preventive maintenance is essential to keep repair expenses manageable.
+              </p>
+
+              <h3>Wolf</h3>
+              <p>
+                Wolf commercial stoves are synonymous with luxury and top-tier performance, often found in high-end restaurants and hotels. Due to the premium nature of the brand, repair costs can be significantly higher. Common repairs might involve sophisticated control panel replacements, high-quality burner repairs, or intricate electrical fixes. The cost for repairing a Wolf stove can range from <b>$400 to $1,200</b>, reflecting the high-quality parts and specialized labor required. The brand’s commitment to excellence means that repairs should be performed by certified technicians, ensuring that the stove continues to operate at peak performance.
+              </p>
+
+              <h3>Imperial</h3>
+              <p>
+                Imperial stoves are known for their rugged construction and reliability, making them a popular choice in many commercial kitchens. Repair costs for Imperial stoves are generally moderate, with common issues including burner replacements, valve adjustments, and igniter repairs. The cost of repairs typically ranges from <b>$250 to $800</b>, depending on the specific problem and the model of the stove. Parts for Imperial stoves are usually easy to source, which can help keep repair times and costs down. Regular maintenance is key to ensuring these stoves continue to perform reliably under heavy use.
+              </p>
+
+              <h3>BlueStar</h3>
+              <p>
+                BlueStar stoves are highly regarded for their powerful performance and customizability, often favored by chefs who require precise control and high heat output. Repair costs for BlueStar stoves can be relatively high due to the specialized nature of their components and the need for expert technicians. Common repairs might include burner recalibrations, thermostat replacements, or control panel fixes. The cost for repairing a BlueStar stove typically ranges from <b>$350 to $1,000</b>. Ensuring that repairs are carried out by authorized service providers can help maintain the stove's high performance and extend its lifespan.
+              </p>
+             
+            </div>
+          </div>
+
+          <div class="content__page-full-logo-brand">
+            <div class="ph-logo-brand">
+              <div class="logo-brand logo-bran-ph-1">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/vulcan.webp"
+                    alt="Vulcan"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-2">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/wolf.webp"
+                    alt="Wolf"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-3">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/garland.webp"
+                    alt="Garland"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-4">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/southbend.webp"
+                    alt="Southbend"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-5">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/imperial.webp"
+                    alt="Imperial"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-6">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/blodgett.webp"
+                    alt="Blodgett"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-7">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/us-range.webp"
+                    alt="US Range"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-8">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/montague.webp"
+                    alt="Montague"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-9">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/bakers-pride.webp"
+                    alt="Bakers Pride"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-10">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/bluestar.webp"
+                    alt="BlueStar"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-11">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/electrolux.webp"
+                    alt="Electrolux"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-12">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/american-range.webp"
+                    alt="American Range"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-13">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/jade-range.webp"
+                    alt="Jade Range"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-14">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/pitco.webp"
+                    alt="Pitco"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-15">
+                <a href="#">
+                  <img
+                    width="150px"
+                    height="150px"
+                    src="/brand-logos/turbo-air.webp"
+                    alt="Turbo Air"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+            </div>
+
+            <div class="full-desc-logo-brand">
+              <p>Brands of Commercial Stove we repair</p>
+
+              <div class="desc-logo-brand logo-bran-d-1">
+                <h3><a href="#">Vulcan</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-2">
+                <h3><a href="#">Wolf</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-3">
+                <h3><a href="#">Garland</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-4">
+                <h3><a href="#">Southbend</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-5">
+                <h3><a href="#">Imperial</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-6">
+                <h3><a href="#">Blodgett</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-7">
+                <h3><a href="#">US Range</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-8">
+                <h3><a href="#">Montague</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-9">
+                <h3><a href="#">Bakers Pride</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-10">
+                <h3><a href="#">BlueStar</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-11">
+                <h3><a href="#">Electrolux</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-12">
+                <h3><a href="#">American Range</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-13">
+                <h3><a href="#">Jade Range</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-14">
+                <h3><a href="#">Pitco</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-15">
+                <h3><a href="#">Turbo Air</a></h3>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+        <Btn />
+
+
+
+
+
+
+
+
+
+
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
@@ -1435,4 +1749,4 @@ const title ="Commercial Stove Repair Cost - Full Pricing Guide";
     </main>
   </Container>
   <Cta />
- 
+  <LogoBrands />
